[package]
name = "compiler-rs-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
serde = {version="1.0.228", features=["std","derive"]}
serde_json = "1.0.145"

[dev-dependencies]
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
crate-type = ["cdylib","lib"]

[profile.release]
lto = true
panic = "abort"


[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
